--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Zoro Maze Adventure 🧭</h1>
   <canvas id="game" width="400" height="400"></canvas>
-  <audio id="bg-music" src="assets/music.mp3" autoplay loop></audio>
+  <audio id="bg-music" src="music.mp3" autoplay loop></audio>
   <script src="game.js"></script>
 </body>
 </html>
